--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,10 @@ pyinotify==0.9.6
 PyJWT==1.7.1
 pylint==2.8.3
 pymacaroons==0.13.0
-python-debian===0.1.36ubuntu1
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pyRFC3339==1.1
+python-dateutil==2.8.2
 python-xapp==2.0.2
 python-xlib==0.23
 pytz==2019.3
